[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Fonctions_vue_de_haut.gd" type="Script" id=1]
[ext_resource path="res://Art/yuck2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/objets_en_mouvement/porte_avec_zone.gd" type="Script" id=3]
[ext_resource path="res://Art/bouton_porte.png" type="Texture" id=4]
[ext_resource path="res://Art/porte.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Personnages/Joueur1Cote.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Ressources/ObjetRaycast.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/porte_camera.gd" type="Script" id=8]



[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "yuck2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 48 )

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393195, 0, 0, 393196, 0, 0, 393197, 0, 0, 393198, 0, 0, 393199, 0, 0, 393200, 0, 0, 393201, 0, 0, 393202, 0, 0, 393203, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393253, 0, 0, 393254, 0, 0 )

[node name="Joueur1Cote" parent="." instance=ExtResource( 6 )]
position = Vector2( 170, 127 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]
anchor_mode = 0
current = true

[node name="Camera2D2" type="Camera2D" parent="Node2D"]
position = Vector2( -700, 0 )

[node name="Area2D" type="Area2D" parent="Node2D/Camera2D2"]
position = Vector2( 800, 150 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Camera2D2/Area2D"]
shape = SubResource( 3 )

[node name="Bouton" type="Area2D" parent="."]
position = Vector2( 250, 150 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bouton"]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bouton"]
shape = SubResource( 5 )

[node name="Porte_bouton" type="KinematicBody2D" parent="."]
position = Vector2( 500, 110 )
script = ExtResource( 3 )
position_finale = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Porte_bouton"]
frames = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porte_bouton"]
shape = SubResource( 7 )

[node name="Tween" type="Tween" parent="Porte_bouton"]

[node name="RayCastB" type="RayCast2D" parent="Porte_bouton"]
cast_to = Vector2( -16, 55 )

[node name="RayCastB2" type="RayCast2D" parent="Porte_bouton"]
cast_to = Vector2( 16, 55 )

[node name="ObjetRaycast" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 140 )
[connection signal="body_entered" from="Node2D/Camera2D2/Area2D" to="Node2D/Camera2D2/Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Bouton" to="Porte_bouton" method="_on_Bouton_body_entered"]
[connection signal="body_exited" from="Bouton" to="Porte_bouton" method="_on_Bouton_body_exited"]
